# llm-serving-optimization

./: .gitignore  CLAUDE.md  MEMBER_B_TODO.md  PROJECT_PLAN_FINAL.md  README.md  docker-compose.int4.yml  docker-compose.int8.yml  docker-compose.yml  main.py  pyproject.toml  run_experiments.py
.claude/: CLAUDE.md  settings.local.json
benchmark/: client.py  prepare_sharegpt.py
cloud/: sagemaker_benchmark.py  sagemaker_deploy.py
cloud/vertex/: run_vertex_benchmarks.sh  vertex_benchmark.py  vertex_cleanup.py  vertex_deploy.py
evaluation/: analyze.py  plot_results.py
monitoring/prometheus/: prometheus.yml
results/: FINDINGS.md  analysis_local.md
results/raw/: autoscale_instance_log.json  autoscale_request_log.json  bench_c16_n100_maxlen2048.csv  bench_c16_n100_maxlen4096.csv  bench_c16_n95_maxlen1024.csv  bench_c1_n100_maxlen2048.csv  bench_c1_n100_maxlen4096.csv  bench_c1_n95_maxlen1024.csv  bench_c4_n100_maxlen2048.csv  bench_c4_n100_maxlen4096.csv  bench_c4_n95_maxlen1024.csv  bench_c8_n100_maxlen2048.csv  bench_c8_n100_maxlen4096.csv  bench_c8_n95_maxlen1024.csv  diagnose_monitor_log.json  diagnose_request_log.json  hf_baseline_c1_n20.csv  hf_c1_n100_maxlen1024.csv  sagemaker_fp16_c1_n100.csv  sagemaker_fp16_c8_n100.csv  sagemaker_int4awq_c1_n100.csv  sagemaker_int4awq_c8_n100.csv  sagemaker_int8gptq_c1_n100.csv  sagemaker_int8gptq_c8_n100.csv  vertex_fp16_c1_n100.csv  vertex_fp16_c1_n5.csv  vertex_fp16_c8_n100.csv  vertex_int4_c1_n100.csv  vertex_int4_c8_n100.csv  vertex_int8_c1_n100.csv  vertex_int8_c8_n100.csv  (+1 more)
serving/: Dockerfile  baseline_hf.py
(+3 files in other folders)
